go/itcases/__snapshots__/error_test.snap

[TestStatementFailure - 1]
result set not found: c8fe71d6-3695-11f0-85b3-063c3400fda9
---

[TestStatementFailure - 2]
0: failed to prepare statement: "SELECT REGEXP_MATCH('some text', 'malformed regex: \\d')"
1: failed to parse input

========================================

error: failed to execute statement
 --> ScopeQL:1:34
  |
1 | SELECT REGEXP_MATCH('some text', 'malformed regex: \d')
  |        ^^^^^^^^^^^^              ^^^^^^^^^^^^^^^^^^^^^ invalid escape or unicode
  |        |
  |        while parsing expression
  |

---
